--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,8 @@
+@import './styles/fonts';
+@import './styles/global';
+@import './styles/mixins';
+@import './styles/variables';
+
 iframe {
   display: none;
 }
