--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -17,7 +17,5 @@ $color-success: #27AE60;
 $color-error: #EB5757;
 
 // Breakpoints
-$breakpoint-desctop: 1200px;
+$breakpoint-desktop: 1200px;
 $breakpoint-tablet-min: 640px;
-$breakpoint-tablet-max: 1199px;
-$breakpoint-mobile-max: 639px;
