--- a/src/modules/_shared/components/atoms/ArrowButton/ArrowButton.module.scss
+++ b/src/modules/_shared/components/atoms/ArrowButton/ArrowButton.module.scss
@@ -19,7 +19,8 @@
     rotate: 180deg;
   }
 
-  &-disabled {     //how to name?
+  &-disabled {
+    //how to name?
     background-image: url(../../../../../assets/icons/icon-arrow-left-grey.svg);
   }
 
@@ -30,15 +31,12 @@
     border: none;
 
     &-disabled {
-      background-color: #0F1121;
-      border: 1px solid #3B3E4A;
+      background-color: #0f1121;
+      border: 1px solid #3b3e4a;
     }
 
     &:not([disabled]):hover {
-      background-color: #4A4D58;
+      background-color: #4a4d58;
     }
   }
 }
-
-
-
