--- a/src/modules/_shared/components/atoms/DefaultButton/DefaultButton.module.scss
+++ b/src/modules/_shared/components/atoms/DefaultButton/DefaultButton.module.scss
@@ -1,12 +1,12 @@
 .defaultButton {
   width: 100%;
   height: 100%;
-  background-color: #905BFF;
-  color: #F1F2F9;
+  background-color: #905bff;
+  color: #f1f2f9;
   border: none;
 
   &:hover {
-    background-color: #A378FF;
+    background-color: #a378ff;
   }
 
   &-selected {
