--- a/src/modules/_shared/components/atoms/PageSelectButton/PageSelectButton.module.scss
+++ b/src/modules/_shared/components/atoms/PageSelectButton/PageSelectButton.module.scss
@@ -2,15 +2,14 @@
   width: 32px;
   height: 32px;
   background-color: #161827;
-  color: #F1F2F9;
+  color: #f1f2f9;
   border: none;
 
   &:hover {
-    background-color: #3B3E4A;
+    background-color: #3b3e4a;
   }
 
   &-selected {
-    background-color: #905BFF;
+    background-color: #905bff;
   }
 }
-
