--- a/src/modules/_shared/components/atoms/BackButton/BackButton.module.scss
+++ b/src/modules/_shared/components/atoms/BackButton/BackButton.module.scss
@@ -3,8 +3,8 @@
   height: 20px;
   display: flex;
   gap: 4px;
-  color: #F1F2F9;
-  background-color: #0F1121;
+  color: #f1f2f9;
+  background-color: #0f1121;
   padding: 0;
   padding-inline: 10px;
 
@@ -25,11 +25,10 @@
   }
 
   &:hover {
-    color: #905BFF;
+    color: #905bff;
 
     .back-arrow {
       background-image: url(../../../../../assets/icons/icon-arrow-left-purple.svg);
     }
   }
 }
-
