--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -7,7 +7,7 @@
   }
 
   @mixin on-desktop {
-    @media (min-width: $breakpoint-desctop) {
+    @media (min-width: $breakpoint-desktop) {
       @content;
     }
   }
