--- a/src/modules/_shared/components/atoms/ArrowButton/ArrowButton.module.scss
+++ b/src/modules/_shared/components/atoms/ArrowButton/ArrowButton.module.scss
@@ -1,3 +1,5 @@
+@import '../../../../../App.scss';
+
 .arrow {
   background-position: center;
   background-repeat: no-repeat;
@@ -20,23 +22,21 @@
   }
 
   &-disabled {
-    //how to name?
     background-image: url(../../../../../assets/icons/icon-arrow-left-grey.svg);
   }
 
   &-button {
     width: 32px;
     height: 32px;
-    background-color: #323542;
+    background-color: $color-card;
     border: none;
 
     &-disabled {
-      background-color: #0f1121;
-      border: 1px solid #3b3e4a;
+      border: 1px solid $color-element;
     }
 
     &:not([disabled]):hover {
-      background-color: #4a4d58;
+      background-color: $color-icon;
     }
   }
 }
