--- a/src/modules/_shared/components/atoms/ColorSelectorButton/ColorSelector.module.scss
+++ b/src/modules/_shared/components/atoms/ColorSelectorButton/ColorSelector.module.scss
@@ -1,16 +1,18 @@
+@import '../../../../../App.scss';
+
 .colorSelector {
   width: 32px;
   height: 32px;
-  border: 2px solid #3b3e4a;
+  border: 2px solid $color-element;
   border-radius: 50%;
   padding: 2px;
 
   &:hover {
-    border-color: #75767f;
+    border-color: $color-text-secondary;
   }
 
   &-active {
-    border-color: #f1f2f9;
+    border-color: $color-text-main;
   }
 
   &-link {
