--- a/src/modules/_shared/components/atoms/DefaultButton/DefaultButton.module.scss
+++ b/src/modules/_shared/components/atoms/DefaultButton/DefaultButton.module.scss
@@ -1,15 +1,16 @@
+@import '../../../../../App.scss';
+
 .defaultButton {
   width: 100%;
   height: 100%;
-  background-color: #905bff;
-  color: #f1f2f9;
+  background-color: $color-accent;
   border: none;
 
   &:hover {
-    background-color: #a378ff;
+    background-color: #A378FF;
   }
 
   &-selected {
-    background-color: #323542;
+    background-color: $color-card;
   }
 }
