--- a/src/modules/_shared/components/atoms/FavouriteButton/FavouriteButton.module.scss
+++ b/src/modules/_shared/components/atoms/FavouriteButton/FavouriteButton.module.scss
@@ -1,3 +1,5 @@
+@import '../../../../../App.scss';
+
 .favouriteButton {
   background-position: center;
   background-repeat: no-repeat;
@@ -5,16 +7,16 @@
 
   width: 100%;
   height: 100%;
-  background-color: #323542;
+  background-color: $color-card;
   border: none;
 
   &:hover {
-    background-color: #4a4d58;
+    background-color: $color-icon;
   }
 
   &-selected {
     background-image: url(../../../../../assets/icons/icon-favorite-heart-filled.svg);
-    background-color: #0f1121;
-    border: 1px solid #3b3e4a;
+    background-color: $color-bg;
+    border: 1px solid $color-element;
   }
 }
