--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -9,18 +9,19 @@ html {
   font-size: 14px;
   line-height: 21px;
   letter-spacing: 0;
-}
-
-h1,
-h2,
-h3,
-h4,
-.uppercase,
-.body-text,
-.small-text {
   margin: 0;
   padding: 0;
-  color: inherit;
+  color: $color-text-main;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  background-color: $color-bg;
+  color: $color-text-main;
 }
 
 h1 {
@@ -75,6 +76,7 @@ h4 {
 }
 
 .uppercase {
+  font-family: 'Mont', sans-serif;
   font-weight: 800;
   font-size: 12px;
   line-height: 11px;
@@ -83,6 +85,7 @@ h4 {
 }
 
 .button-text {
+  font-family: 'Mont', sans-serif;
   font-weight: 700;
   font-size: 14px;
   line-height: 21px;
@@ -90,8 +93,10 @@ h4 {
 }
 
 .small-text {
+  font-family: 'Mont', sans-serif;
   font-weight: 700;
   font-size: 12px;
   line-height: 15px;
   letter-spacing: 0;
+  color: $color-text-secondary;
 }
