--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,20 +1,20 @@
 // Base
-$color-bg: #0F1121;
+$color-bg: #0f1121;
 $color-surface: #161827;
 $color-card: #323542;
 
 // Text
-$color-text-main: #F1F2F9;
-$color-text-secondary: #75767F;
+$color-text-main: #f1f2f9;
+$color-text-secondary: #75767f;
 
 // UI
-$color-icon: #4A4D58;
-$color-element: #3B3E4A;
+$color-icon: #4a4d58;
+$color-element: #3b3e4a;
 
 // Accents
-$color-accent: #905BFF;
-$color-success: #27AE60;
-$color-error: #EB5757;
+$color-accent: #905bff;
+$color-success: #27ae60;
+$color-error: #eb5757;
 
 // Breakpoints
 $breakpoint-desktop: 1200px;
