--- a/src/modules/_shared/components/atoms/icons/IconWithCounter/IconWithCounter.scss
+++ b/src/modules/_shared/components/atoms/icons/IconWithCounter/IconWithCounter.scss
@@ -1,4 +1,4 @@
-@use './variables' as *;
+@use '../../../../../../styles/variables' as *;
 .icon-wrapper {
     position: relative;
     width: 16px;
