--- a/src/modules/_shared/components/atoms/DefaultButton/DefaultButton.module.scss
+++ b/src/modules/_shared/components/atoms/DefaultButton/DefaultButton.module.scss
@@ -5,6 +5,7 @@
   height: 100%;
   background-color: $color-accent;
   border: none;
+  cursor: pointer;
 
   &:hover {
     background-color: #a378ff;
