--- a/src/modules/_shared/components/atoms/PageSelectButton/PageSelectButton.module.scss
+++ b/src/modules/_shared/components/atoms/PageSelectButton/PageSelectButton.module.scss
@@ -5,6 +5,7 @@
   height: 32px;
   background-color: $color-surface;
   border: none;
+  cursor: pointer;
 
   &:hover {
     background-color: $color-element;
