--- a/src/modules/_shared/components/atoms/FavouriteButton/FavouriteButton.module.scss
+++ b/src/modules/_shared/components/atoms/FavouriteButton/FavouriteButton.module.scss
@@ -4,6 +4,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-image: url(../../../../../assets/icons/icon-favorite-heart.svg);
+  cursor: pointer;
 
   width: 100%;
   height: 100%;
