--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -76,7 +76,7 @@ h4 {
   text-transform: uppercase;
 }
 
-.button-text {
+.buttonText {
   font-family: 'Mont', sans-serif;
   font-weight: 700;
   font-size: 14px;
@@ -84,7 +84,7 @@ h4 {
   letter-spacing: 0;
 }
 
-.small-text {
+.smallText {
   font-family: 'Mont', sans-serif;
   font-weight: 700;
   font-size: 12px;
