--- a/src/modules/_shared/components/atoms/ColorSelectorButton/ColorSelector.module.scss
+++ b/src/modules/_shared/components/atoms/ColorSelectorButton/ColorSelector.module.scss
@@ -12,11 +12,11 @@
     border-color: $color-text-secondary;
   }
 
-  &-active {
+  &Active {
     border-color: $color-text-main;
   }
 
-  &-link {
+  &Link {
     display: block;
     width: 100%;
     height: 100%;
