--- a/src/modules/_shared/components/atoms/FavouriteButton/FavouriteButton.module.scss
+++ b/src/modules/_shared/components/atoms/FavouriteButton/FavouriteButton.module.scss
@@ -4,7 +4,6 @@
   background-position: center;
   background-repeat: no-repeat;
   background-image: url(../../../../../assets/icons/icon-favorite-heart.svg);
-  cursor: pointer;
 
   width: 100%;
   height: 100%;
@@ -15,7 +14,7 @@
     background-color: $color-icon;
   }
 
-  &-selected {
+  &Selected {
     background-image: url(../../../../../assets/icons/icon-favorite-heart-filled.svg);
     background-color: $color-bg;
     border: 1px solid $color-element;
