--- a/src/modules/_shared/components/atoms/icons/IconWithCounter/IconWithCounter.module.scss
+++ b/src/modules/_shared/components/atoms/icons/IconWithCounter/IconWithCounter.module.scss
@@ -1,33 +1,32 @@
 @use '../../../../../../styles/variables' as *;
-.icon-wrapper {
-    position: relative;
-    width: 16px;
-    height: 16px;
-    cursor: pointer;
+
+.iconWrapper {
+  position: relative;
+  width: 16px;
+  height: 16px;
+  cursor: pointer;
 }
 
-.icon-image {
-    width: 100%;
-    height: 100%;
+.iconImage {
+  width: 100%;
+  height: 100%;
 }
-.icon-badge {
-    position: absolute;
-    top: -6px;
-    right: -6px;
-    width: 11px;
-    height: 11px;
-    background-color: #EB5757;
-    //background-color: $color-error;
-    color: #F1F2F9;
-    // color:$color-text-main;
-    font-size: 8px;
-    line-height: 100%;
-    letter-spacing: 0;
-    font-weight: 700;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid #0F1121;
-    //border: 1px solid $color-bg;
+
+.iconBadge {
+  position: absolute;
+  top: -6px;
+  right: -6px;
+  width: 11px;
+  height: 11px;
+  background-color: $color-error;
+  color: $color-text-main;
+  font-size: 8px;
+  line-height: 100%;
+  letter-spacing: 0;
+  font-weight: 700;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid $color-bg;
 }
