feat change button sizes

--- a/src/modules/_shared/components/atoms/ArrowButton/ArrowButton.module.scss
+++ b/src/modules/_shared/components/atoms/ArrowButton/ArrowButton.module.scss
@@ -27,8 +27,8 @@
   }
 
   &Button {
-    width: 32px;
-    height: 32px;
+    width: 100%;
+    height: 100%;
     background-color: $color-card;
     border: none;
 
