--- a/src/modules/_shared/components/organisms/Footer/Footer.module.scss
+++ b/src/modules/_shared/components/organisms/Footer/Footer.module.scss
@@ -1,63 +1,72 @@
-.footer {
-  max-width: 1400px;
-  background-color: #0f1121;
-  color: #fff;
-  padding: 40px 20px;
+@import '../../../../../App.scss';
 
-  &__container {
-    max-width: 1200px;
-    font-family: Mont, sans-serif;
+.footer {
+  padding: 40px 20px;
+  @include content-padding-in-line();
+
+  &Container {
     margin: 0 auto;
     display: grid;
-    grid-template-columns: auto 1fr auto;
-    align-items: center;
-    gap: 20px;
+    max-width: 320px;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto;
+    gap: 24px;
+
+    @include on-tablet {
+      max-width: 1200px;
+      grid-template-columns: auto 1fr auto;
+      align-items: center;
+      gap: 20px;
+    }
   }
 
-  &__logo {
+  &Logo {
     display: flex;
   }
 
-  &__nav-container {
+  &NavContainer {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
   }
 
-  &__nav {
-    font-weight: 800;
+  &Nav {
     list-style: none;
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
-    width: 100%;
+    flex-direction: column;
+    gap: 12px;
+    align-items: flex-start;
+    padding: 0;
+    margin: 0;
+
+    @include on-tablet {
+      flex-direction: row;
+      align-items: center;
+      width: 100%;
+    }
 
     li a {
-      text-transform: uppercase;
-      color: #fff;
+      color: $color-text-main;
       text-decoration: none;
-      font-weight: 800;
-      font-size: 12px;
-      line-height: 11px;
-      word-spacing: 4%;
     }
   }
 
-  &__back-container {
-    font-weight: 700;
+  &BackContainer {
     display: flex;
-    gap: 16px;
     align-items: center;
-    justify-content: flex-end;
+    gap: 8px;
+    justify-content: center;
 
-    &-text {
-      font-size: 12px;
-      line-height: 100%;
-      letter-spacing: 0%;
-      color: rgba(117, 118, 127, 1);
-      font-weight: 700;
+    @include on-tablet {
+      gap: 16px;
+      justify-content: flex-end;
     }
 
-    &-button {
+    &Text {
+      color: $color-text-secondary;
+    }
+
+    &Button {
       display: flex;
       border: none;
       background-color: rgba(50, 53, 66, 1);
@@ -71,34 +80,10 @@
         background-color: rgba(74, 77, 88, 1);
       }
 
-      &-icon {
+      &Icon {
         width: 16px;
         height: 16px;
       }
-    }
-  }
-}
-
-@media (max-width: 480px) {
-  .footer {
-    &__container {
-      max-width: 320px;
-      grid-template-columns: 1fr;
-      grid-template-rows: auto auto auto;
-      gap: 24px;
-    }
-
-    &__nav {
-      flex-direction: column;
-      gap: 12px;
-      align-items: flex-start;
-      padding: 0;
-      margin: 0;
-    }
-
-    &__back-container {
-      gap: 8px;
-      justify-content: center;
     }
   }
 }
