style(dev-vlad)/some changes

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -5,16 +5,26 @@
     @content;
   }
 }
-
-  @mixin on-desktop {
-    @media (min-width: $breakpoint-desktop) {
-      @content;
-    }
+@mixin on-tablet {
+  @media (min-width: $breakpoint-tablet) {
+    @content;
   }
+}
+
+@mixin on-desktop {
+  @media (min-width: $breakpoint-desktop) {
+    @content;
+  }
+}
 
 @mixin content-padding-in-line() {
   padding-inline: 16px;
+@mixin content-padding-in-line() {
+  padding-inline: 16px;
 
+  @include on-tablet {
+    padding-inline: 24px;
+  }
   @include on-tablet {
     padding-inline: 24px;
   }
@@ -25,17 +35,35 @@
     margin-inline: auto;
   }
 }
+  @include on-desktop {
+    max-width: 1136px;
+    padding-inline: 32px;
+    margin-inline: auto;
+  }
+}
 
+@mixin grid-layout {
+  display: grid;
+  gap: 16px;
 @mixin grid-layout {
   display: grid;
   gap: 16px;
 
   grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, 1fr);
 
   @include on-tablet {
     grid-template-columns: repeat(12, 1fr);
   }
+  @include on-tablet {
+    grid-template-columns: repeat(12, 1fr);
+  }
 
+  @include on-desktop {
+    grid-template-columns: repeat(24, 32px);
+    justify-content: center;
+  }
+}
   @include on-desktop {
     grid-template-columns: repeat(24, 32px);
     justify-content: center;
