--- a/src/components/organisms/Header/Header.module.scss
+++ b/src/components/organisms/Header/Header.module.scss
@@ -16,7 +16,7 @@
   }
 }
 
-.header__left {
+.headerLeft {
   display: flex;
   align-items: center;
   gap: 16px;
@@ -27,7 +27,7 @@
   }
 }
 
-.header__logo {
+.headerLogo {
   display: flex;
   align-items: center;
   padding-inline: 16px;
@@ -42,11 +42,11 @@
   }
 }
 
-.header__nav {
+.headerNav {
   flex: 2 1 auto;
 }
 
-.header__icons {
+.headerIcons {
   display: flex;
   height: 100%;
 }
@@ -71,14 +71,14 @@
   display: flex;
   align-items: center;
 
-  &__list {
+  &List {
     display: flex;
     list-style: none;
     margin: 0;
     padding: 0;
   }
 
-  &__item {
+  &Item {
     margin-right: 32px;
 
     &:last-child {
@@ -90,7 +90,7 @@
     }
   }
 
-  &__link {
+  &Link {
     display: none;
     align-items: center;
     color: $color-text-secondary;
