--- a/src/components/organisms/Navbar/Navbar.module.scss
+++ b/src/components/organisms/Navbar/Navbar.module.scss
@@ -88,10 +88,12 @@
     flex-direction: column;
     align-items: center;
     list-style: none;
+    gap: 16px;
   }
 
   &Item {
-    margin-bottom: 24px;
+    margin-bottom: 8px;
+    margin-top: 8px;
   }
 
   &Link {
