--- a/src/modules/_shared/components/organisms/Footer/Footer.module.scss
+++ b/src/modules/_shared/components/organisms/Footer/Footer.module.scss
@@ -49,7 +49,7 @@
       grid-column: 8/17;
     }
 
-    a {
+    &Link {
       color: $color-text-main;
       text-decoration: none;
       list-style: none;
