--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,25 @@
 iframe {
   display: none;
 }
+
+#root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main {
+  flex: 1;
+}
+
+.footer {
+  margin-top: auto;
+}
+
+
