--- a/src/modules/_shared/components/organisms/Header/Header.module.scss
+++ b/src/modules/_shared/components/organisms/Header/Header.module.scss
@@ -31,15 +31,11 @@
   display: flex;
   align-items: center;
   padding-inline: 16px;
-  transition: transform 0.3s ease;
 
   @include on-desktop {
     padding-inline: 24px;
   }
-
-  &:hover {
-    transform: scale(1.1);
-  }
+  @include img-hover-scale(1.1)
 }
 
 .headerNav {
