--- a/src/modules/_shared/components/organisms/Navbar/Navbar.module.scss
+++ b/src/modules/_shared/components/organisms/Navbar/Navbar.module.scss
@@ -4,13 +4,17 @@
 .menu {
   position: fixed;
   top: 0;
+  left: 0;
   right: 0;
   bottom: 0;
-  width: 100%;
-  background-color: $color-bg;
+
+  z-index: 999;
+
+  height: 100vh;
+
   display: flex;
   flex-direction: column;
-
+  background-color: $color-bg;
   @include on-tablet {
     display: none;
   }
