feat(TTP-37): create app layout

--- a/src/modules/_shared/components/organisms/Header/Header.module.scss
+++ b/src/modules/_shared/components/organisms/Header/Header.module.scss
@@ -35,7 +35,7 @@
   @include on-desktop {
     padding-inline: 24px;
   }
-  @include img-hover-scale(1.1)
+  @include img-hover-scale(1.1);
 }
 
 .headerNav {
