--- a/src/modules/_shared/components/organisms/Footer/Footer.module.scss
+++ b/src/modules/_shared/components/organisms/Footer/Footer.module.scss
@@ -31,8 +31,8 @@
       grid-column: 1/8;
     }
 
-    &Icon{
-      @include img-hover-scale(1.1)
+    &Icon {
+      @include img-hover-scale(1.1);
     }
   }
 
