style(dev-vlad)/changes in style,add variables

--- a/src/modules/_shared/components/atoms/DefaultButton/DefaultButton.module.scss
+++ b/src/modules/_shared/components/atoms/DefaultButton/DefaultButton.module.scss
@@ -7,11 +7,12 @@
   border: none;
   cursor: pointer;
 
-  &:hover {
+  &:not([disabled]):hover {
     background-color: #a378ff;
   }
 
   &Selected {
     background-color: $color-card;
+    cursor: auto;
   }
 }
