--- a/src/modules/_shared/components/molecules/ProductCard/ProductCard.module.scss
+++ b/src/modules/_shared/components/molecules/ProductCard/ProductCard.module.scss
@@ -1,15 +1,22 @@
 @import '../../../../../App.scss';
 
 .productCardContainer {
-  background-color: $color-surface;
-  width: 272px;
+  width: 272px; //<-- remove when add grid layout
 }
 
 .productCard {
+  background-color: $color-surface;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 8px;
   padding: 32px;
+  box-sizing: border-box;
+  border: 1px solid $color-surface;
+
+  &:hover {
+    border-color: $color-card;
+  }
 
   &Image {
     border-radius: 4px;
@@ -38,7 +45,7 @@
   }
 
   &Border {
-    border: 1px solid rgba(59, 62, 74, 1);
+    border: 1px solid $color-card;
   }
 
   &Details {
@@ -64,16 +71,20 @@
 
   &Buttons {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     gap: 8px;
+    padding-top: 8px;
 
     &Default {
-      width: 100%;
+      flex: 1 1 auto;
+      height: 40px;
     }
 
     &Favourite {
       width: 40px;
       height: 40px;
+      flex-shrink: 0;
     }
   }
 }
