change props in CartItem

--- a/src/modules/_shared/components/molecules/CartItem/CartItem.module.scss
+++ b/src/modules/_shared/components/molecules/CartItem/CartItem.module.scss
@@ -97,6 +97,8 @@
     margin-inline: auto;
     display: block;
 
+    @include img-hover-scale(1.1);
+
     @include on-tablet {
       height: 80px;
       width: 80px;
