new branch for product card

--- a/src/modules/_shared/components/atoms/FavouriteButton/FavouriteButton.module.scss
+++ b/src/modules/_shared/components/atoms/FavouriteButton/FavouriteButton.module.scss
@@ -9,6 +9,7 @@
   height: 100%;
   background-color: $color-card;
   border: none;
+  cursor: pointer;
 
   &:hover {
     background-color: $color-icon;
