--- a/src/modules/_shared/components/organisms/Header/Header.module.scss
+++ b/src/modules/_shared/components/organisms/Header/Header.module.scss
@@ -72,17 +72,10 @@
     list-style: none;
     margin: 0;
     padding: 0;
-  }
-
-  &Item {
-    margin-right: 32px;
-
-    &:last-child {
-      margin-right: 0;
-    }
+    column-gap: 32px;
 
     @include on-desktop {
-      margin-right: 64px;
+      column-gap: 64px;
     }
   }
 
