--- a/src/modules/ShoppingCartPage/ShopingCart.module.scss
+++ b/src/modules/ShoppingCartPage/ShopingCart.module.scss
@@ -38,11 +38,68 @@
     }
   }
 
+
+
   &Confirm {
     grid-column: 1 / -1;
+    width: 100%;
+    height: min-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+    box-sizing: border-box;
+
+    padding: 24px;
+    border: 1px solid $color-element;
 
     @include on-desktop {
       grid-column: 17 / -1;
+      row-gap: 24px;
+    }
+
+    &Info {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      &Count {
+        color: $color-text-secondary;
+      }
+    }
+
+    &Button {
+      width: 100%;
+      height: 48px;
     }
   }
+
+  &Empty {
+    grid-column: 1/ -1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+
+    @include on-tablet {
+      gap: 24px;
+    }
+
+    &Image {
+      max-width: 100%;
+    }
+
+    &Button {
+      width: 80%;
+      height: 48px;
+      max-width: 495px;
+    }
+  }
+}
+
+hr {
+  width: 100%;
+  border-color: $color-element;
+  margin: 0;
 }
