--- a/src/modules/ShoppingCartPage/ShopingCart.module.scss
+++ b/src/modules/ShoppingCartPage/ShopingCart.module.scss
@@ -4,6 +4,7 @@
   @include content-padding-in-line();
   @include grid-layout;
   margin-bottom: 56px;
+  row-gap: 32px;
 
   @include on-tablet {
     margin-bottom: 64px;
@@ -17,14 +18,14 @@
     grid-column: 1 / -1;
     margin-top: 24px;
     align-content: start;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
 
     @include on-tablet {
+      gap: 16px;
       margin-top: 40px;
     }
-  }
-
-  &Title {
-    grid-column: 1 / -1;
   }
 
   &Cards {
