--- a/src/modules/_shared/components/organisms/Header/Header.module.scss
+++ b/src/modules/_shared/components/organisms/Header/Header.module.scss
@@ -131,6 +131,9 @@
     box-shadow: -1px 0 0 0 $color-element;
     text-decoration: none;
   }
+  @include on-desktop {
+    width: 64px;
+  }
 }
 
 //icon Burger menu (only on mobile)
