DEV-Vitalii_implement shop by category

--- a/src/modules/_shared/components/organisms/Navbar/Navbar.module.scss
+++ b/src/modules/_shared/components/organisms/Navbar/Navbar.module.scss
@@ -10,7 +10,7 @@
 
   z-index: 999;
 
-  height: 100vh;
+  height: 100dvh;
 
   display: flex;
   flex-direction: column;
@@ -23,7 +23,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100dvh;
 }
 
 // Top section of the menu
